Bug 333388 - Tag manager: Tags removed from images without confirmation dialog
Summary: Tag manager: Tags removed from images without confirmation dialog
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Manager (other bugs)
Version First Reported In: 4.0.0
Platform: Compiled Sources Linux
: NOR critical
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-13 19:35 UTC by Michael G. Hansen
Modified: 2017-07-29 07:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael G. Hansen 2014-04-13 19:35:26 UTC
The action "Delete tags from images" is IMHO very dangerous, because it does not ask for confirmation before deleting tags from images irrevocably. IMHO a confirmation dialog should be used, because the action may be triggered accidentally.

Reproducible: Always
Comment 1 Michael G. Hansen 2014-04-30 20:26:40 UTC
Git commit c45fc07fb00ff0912f0e429c2c4b902f527b415a by Michael Georg Hansen.
Committed on 30/04/2014 at 20:26.
Pushed by mghansen into branch 'master'.

Ask for confirmation before removing a tag from all images.
FIXED-IN: 4.0

M  +2    -1    NEWS
M  +14   -1    digikam/tags/tagsmanager/tagsmanager.cpp

http://commits.kde.org/digikam/c45fc07fb00ff0912f0e429c2c4b902f527b415a