Ask for confirmation before removing a tag from all images.

BUG: 333388
FIXED-IN: 4.0